plugins {
    id "java"
}

group = "cloud.dbug.pack2server"
version = "0.7"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    hutoolVersion = "5.8.40"
    lombokVersion = "1.18.38"
    picocliVersion = "4.7.7"
    jsonpathVersion = "2.9.0"
    compressVersion = "1.28.0"
    junitJupiterVersion = "5.13.4"
}

dependencies {
    // ========== bom ==========
    implementation platform("cn.hutool:hutool-bom:${hutoolVersion}")
    // ========== hutool ==========
    implementation "cn.hutool:hutool-core"
    implementation "cn.hutool:hutool-http"
    implementation "cn.hutool:hutool-json"
    implementation "cn.hutool:hutool-extra"
    implementation "cn.hutool:hutool-system"
    implementation "com.jayway.jsonpath:json-path:${jsonpathVersion}"
    implementation "org.apache.commons:commons-compress:${compressVersion}"
    // ========== picocli ==========
    implementation "info.picocli:picocli:${picocliVersion}"
    // ========== lombok ==========
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    // ========== junit jupiter ==========
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
}

jar {
    manifest {
        attributes(
                'Main-Class': 'cloud.dbug.pack2serv.Pack2Serv',
                'Implementation-Version': version
        )
    }
}

test {
    useJUnitPlatform()
    failOnNoDiscoveredTests = Boolean.FALSE
    systemProperties = [
            'junit.jupiter.execution.parallel.enabled'                 : Boolean.TRUE,
            'junit.jupiter.execution.parallel.mode.default'            : 'concurrent',
            'junit.jupiter.execution.parallel.config.strategy'         : 'fixed',
            'junit.jupiter.execution.parallel.config.fixed.parallelism': 4
    ]
}

tasks.named('build') {
    dependsOn tasks.named('test') {
        enabled = false
    }
}

tasks.register("printVersion") {
    doLast {
        println project.version
    }
}

tasks.register("printJavaVersion") {
    doLast {
        println java.sourceCompatibility
    }
}

tasks.register("printGradleVersion") {
    doLast {
        println gradle.gradleVersion
    }
}

tasks.register("printAllVersions") {
    doLast {
        println "Project Version: ${project.version}"
        println "Java Version: ${java.sourceCompatibility}"
        println "Gradle Version: ${gradle.gradleVersion}"
    }
}